create section navigation and header

--- a/index.html
+++ b/index.html
@@ -4,12 +4,92 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- IconScout CDN-file link -->
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <!-- Custom CSS-file link -->
     <link rel="stylesheet" href="./css/style.min.css">
     <title>Photography Portfolio Website</title>
 </head>
 <body>
-    
+    <!--==================== section NAVIGATION start ====================-->
+    <nav class="navigation">
+        <div class="container nav__container">
+            <a href="index.html" class="nav__logo">
+                <img src="./images/logo.png" alt="logo" class="logo__image">
+            </a>
+            <ul class="nav__links">
+                <li class="nav__links__list">
+                    <a href="#home" class="nav__links__list__link">home</a>
+                </li>
+                <li class="nav__links__list">
+                    <a href="#about" class="nav__links__list__link">about</a>
+                </li>
+                <li class="nav__links__list">
+                    <a href="#gallery" class="nav__links__list__link">gallery</a>
+                </li>
+                <li class="nav__links__list">
+                    <a href="#exhibition" class="nav__links__list__link">exhibition</a>
+                </li>
+            </ul>
+            <ul class="nav__socials">
+                <li class="nav__social__list">
+                    <a href="https://www.instagram.com/" class="nav__social__list__link" target="_blank">
+                        <i class="uil uil-instagram-alt"></i>
+                    </a>
+                </li>
+                <li class="nav__social__list">
+                    <a href="https://www.twitter.com/" class="nav__social__list__link" target="_blank">
+                        <i class="uil uil-twitter"></i>
+                    </a>
+                </li>
+                <li class="nav__social__list">
+                    <a href="https://www.youtube.com/" class="nav__social__list__link" target="_blank">
+                        <i class="uil uil-youtube"></i>
+                    </a>
+                </li>
+            </ul>
+            <div class="nav__toggle-btn uil uil-bars" id="open__menu"></div>
+        </div>
+    </nav>
+    <!--==================== section NAVIGATION ends ====================-->
+
+    <!--==================== section HEADER start ====================-->
+    <header class="header">
+        <div class="container header__container">
+
+            <div class="header__left">
+                <div class="header__left-image-bg"></div>
+
+                <div class="header__left-image-lg">
+                    <img src="./images/header.jpg" alt="Photographer" class="left__image-lg">
+                </div>
+
+                <div class="header__left-image-sm">
+                    <img src="./images/header.jpg" alt="Photographer" class="left__image-sm">
+                </div>
+
+            </div>
+
+            <div class="header__right">
+
+                <div class="header__head">
+                    <div class="empty header__empty"></div>
+                    <a class="header__tag">#best travel photographer 2022</a>
+                </div>
+
+                <h1 class="heading">see the beauty of the world through my lense</h1>
+
+                <p class="header__right-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, ipsam nihil. Minima reiciendis voluptas, velit maiores sunt unde natus maxime illo at vitae, fugiat tempora odit pariatur perferendis magni nostrum.
+                </p>
+
+                <a href="mailto:igornegin@yandex.ru" class="header__right-link">let's talk</a>
+
+            </div>
+
+        </div>
+    </header>
+    <!--==================== section HEADER ends ====================-->
 
 
     <!-- Custom JS-file link -->
